--- a/Project 1/News.html
+++ b/Project 1/News.html
@@ -17,10 +17,10 @@
 </head>
 
 <body>
-    <header>
-      <center>  <img src = "images/logo.png" alt=logo style="width 350 px; height: 300px;" allign = "middle"> </center>
-      <center>  <h1> Premium Shoes Sold At A Premium Price </h1> </center>
-    </header>
+  <header>
+    <center> <a href="index.html"> <img src = "images/logo.png" alt=logo style="width 350 px; height: 300px;" allign = "middle"> </a> </center>
+    <center>  <h1> Premium Shoes Sold At A Premium Price </h1> </center>
+  </header>
 
   <center>  <h2> News </h2> </center>
 
