--- a/Project 1/seller_page.html
+++ b/Project 1/seller_page.html
@@ -18,7 +18,7 @@
 
 <body>
   <header>
-    <center>  <img src = "images/logo.png" alt=logo style="width 350 px; height: 300px;" allign = "middle"> </center>
+    <center> <a href="index.html"> <img src = "images/logo.png" alt=logo style="width 350 px; height: 300px;" allign = "middle"> </a> </center>
     <center>  <h1> Premium Shoes Sold At A Premium Price </h1> </center>
   </header>
 
